--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,18 @@
+cron "0 23 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/myxp.js, tag=美音星品
+cron "8 8 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js, tag=京东京喜88红包动物园版
+cron "15 9 1-18 6" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard08.js, tag=京东618开卡活动8
+cron "15 9 9-20 6" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard07.js, tag=京东618开卡活动7
+cron "15 9 9-20 6" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard06.js, tag=京东618开卡活动6
+cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooSupershophf.js, tag=京东合肥旗舰店开业动物园版
+cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js, tag=京东GNC组队瓜分京豆
+cron "10 10 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js, tag=京东限时盲盒动物园版
+cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard05.js, tag=京东618开卡活动5
+cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard04.js, tag=京东618开卡活动4
+cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard03.js, tag=京东618开卡活动3
+cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard02.js, tag=京东618开卡活动2
+cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard01.js, tag=京东618开卡活动1
+cron "18 9 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooBaojiexiaoxiaole.js, tag=京东宝洁消消乐
+cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, tag=京东浓情618与粽不同
 cron "0 0,9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, tag=京东白条
 cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js, tag=京东价格保护
 cron "0 12 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/bsj.js, tag=保时捷(小程序)
@@ -17,17 +32,6 @@ cron "30 7,19 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubuserco
 cron "1 0-23/1 * 6 * " script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js, tag=京东新潮品牌狂欢翻翻乐
 cron "30 9,10 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js, tag=京东新潮品牌狂欢
 cron "30 11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js, tag=京东特物ZX联想
-cron "8 8 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJx88hongbao.js, tag=京东京喜88红包动物园版
-cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooSupershophf.js, tag=京东合肥旗舰店开业动物园版
-cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJointeam01.js, tag=京东GNC组队瓜分京豆
-cron "10 10 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooLimitbox.js, tag=京东限时盲盒动物园版
-cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard05.js, tag=京东618开卡活动5
-cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard04.js, tag=京东618开卡活动4
-cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard03.js, tag=京东618开卡活动3
-cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard02.js, tag=京东618开卡活动2
-cron "1 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard01.js, tag=京东618开卡活动1
-cron "18 9 1-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooBaojiexiaoxiaole.js, tag=京东宝洁消消乐
-cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooLongzhou.js, tag=京东浓情618与粽不同
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qqtmy.js, tag=京东柠檬618惊奇探秘夜
 cron "5 6-18/6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_wsdlb.js, tag=京东柠檬我是大老板农场
 cron "4 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/jd_scripts-1/master/jd_jxlhb.js, tag=京东京喜88元红包隐藏姓名版
