--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,31 @@
+京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动8 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard08.js,cronexpr="15 9 1-18 6", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动7 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard07.js,cronexpr="15 9 9-20 6", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动6 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard06.js,cronexpr="15 9 9-20 6", timeout=3600, script-update-interval=43200, enable=true
+
+京东合肥旗舰店开业动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooSupershophf.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东GNC组队瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东限时盲盒动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js,cronexpr="10 10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动5 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard05.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动4 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard04.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动3 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard03.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动2 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard02.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动1 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard01.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东宝洁消消乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooBaojiexiaoxiaole.js,cronexpr="18 9 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东浓情618与粽不同 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东白条 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js,cronexpr="0 0,9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东价格保护 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
@@ -33,28 +61,6 @@
 京东新潮品牌狂欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js,cronexpr="30 9,10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东特物ZX联想 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js,cronexpr="30 11 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
-
-京东合肥旗舰店开业动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooSupershophf.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东GNC组队瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooJointeam01.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东限时盲盒动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooLimitbox.js,cronexpr="10 10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618开卡活动5 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard05.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618开卡活动4 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard04.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618开卡活动3 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard03.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618开卡活动2 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard02.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东618开卡活动1 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooOpencard01.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东宝洁消消乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooBaojiexiaoxiaole.js,cronexpr="18 9 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
-
-京东浓情618与粽不同 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/zooPanda/zooLongzhou.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬618惊奇探秘夜 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qqtmy.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
