--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -193,6 +193,8 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东柠檬特物ZXJOY&DOGA = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxjoy.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东京喜88红包动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东618开卡活动8 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard08.js,cronexpr="15 9 1-18 6", timeout=3600, script-update-interval=43200, enable=true
