--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,4 @@
+cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxjoy.js, tag=京东柠檬特物ZXJOY&DOGA
 cron "0 23 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/myxp.js, tag=美音星品
 cron "8 8 * 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js, tag=京东京喜88红包动物园版
 cron "15 9 1-18 6" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard08.js, tag=京东618开卡活动8
