--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -4,6 +4,7 @@
 cron "* * * * 1/1 ?" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_Delck.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=清除京东ck
 cron "1 0-23/1 * 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_SplitRedPacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东天降红包
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_xsmh.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东618限时盲盒
+cron "30 10 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_trial.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_trial.png, enabled=true, tag=京东试用
 cron "15 0,6,13,19,21 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_jxzpk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东京享值PK
 cron "30 7,19 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_limitBox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东限时盲盒
 cron "1 0-23/1 * 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢翻翻乐
@@ -130,7 +131,6 @@ cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bs
 cron "15 08 5-30 4 *" script-path=https://share.r2ray.com/dust/member/monk_vinda.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=“韧”性探索 空降好礼
 cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jin_tie.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领金贴
 cron "0 9 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://qxzy.top/rules/QuantumultX/img/tls.png, enabled=true, tag=特仑苏小程序
-cron "30 10 * * *" script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_try.js, img-url=https://raw.githubusercontent.com/ZCY01/img/master/jdtryv1.png, enabled=true, tag=京东试用
 cron "10 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=猜歌王者改进度
 cron "25 8 * 4-5 *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/z_tcl_lining.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东TCL电视自营
