--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,19 +2,29 @@
 # https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "* * * * 1/1 ?" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_Delck.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=清除京东ck
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxjoy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=特物ZXJOY&DOGA
+cron "0 23 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/myxp.js, img-url=https://qxzy.top/rules/QuantumultX/img/myxp.png, enabled=true, tag=美音星品
+cron "8 8 * 6 *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJx88hongbao.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜88红包
+cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooSupershophf.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=合肥旗舰店开业
+cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东GNC组队瓜分京豆
+cron "10 10 1-18 6 *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=限时盲盒
+cron "18 9 1-18 6 *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooBaojiexiaoxiaole.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=宝洁消消乐
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=浓情618与粽不同
+cron "0 0,9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东白条
+cron "5 0 * * *" script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东价格保护
+cron "0 12 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/bsj.js, img-url=https://qxzy.top/rules/QuantumultX/img/bsj.png, enabled=true, tag=保时捷(小程序)
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_zxrby.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=特物ZX润百颜
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_hsb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=特物ZX护舒宝
 cron "1 0-23/1 * 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_SplitRedPacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东天降红包
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_xsmh.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东618限时盲盒
 cron "30 10 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_trial.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_trial.png, enabled=true, tag=京东试用
 cron "15 0,6,13,19,21 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_jxzpk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东京享值PK
-cron "30 7,19 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_limitBox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东限时盲盒
 cron "1 0-23/1 * 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢翻翻乐
 cron "30 9,10 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_mcxhd_brandcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东新潮品牌狂欢
 cron "30 11 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东特物ZX联想
 cron "1 7,12,19 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_beauty.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=美丽研究院
 cron "0 9,12,18 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxnc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜农场
 cron "20 0-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxmc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜牧场
-cron "8 8 * 6 *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Jx88hongbao.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜领88元红包2
-cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Supershophf.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=合肥旗舰店开业
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/mgtv.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd1561.png, enabled=true, tag=芒果猎狼者撸汽水签到
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/jsm.js, img-url=https://qxzy.top/rules/QuantumultX/img/jsm.png, enabled=true, tag=健身猫（安卓）
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hbdd.js, img-url=https://qxzy.top/rules/QuantumultX/img/hbdd.png, enabled=true, tag=红包多多（安卓）
@@ -25,21 +35,17 @@ cron "5 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/
 cron "52 59 9 * * 0,5,6" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay_voucher.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒支付宝抢消费券
 cron "25 7 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Alipay/Alipay.js, img-url=https://qxzy.top/rules/QuantumultX/img/Alipay.png, enabled=true, tag=提醒签到收能量
 cron "0 22 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ylsh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ylsh.png, enabled=true, tag=引力生活
-cron "0 6 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/Jointeam01.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东GNC组队瓜分京豆
 cron "20 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_big_winner.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=省钱大赢家之翻翻乐
 cron "5,35 * * 6 *" script-path=https://raw.githubusercontent.com/jiulan/platypus/main/scripts/jd_ffl.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东翻翻乐提现
-cron "10 10 1-18 6 *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=限时盲盒
 cron "0 1 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东城城分现金互助
 cron "0  9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_618jc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=手机竞猜
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxlhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京喜领88元红包
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mcxhd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢
 cron "1 */1 1-30 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=大赢家翻翻乐
 cron "1 20 1-18 6 *" script-path=https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东618主会场红包雨
-cron "18 9 1-18 6 *" script-path=https://cdn.jsdelivr.net/gh/zooPanda/zoo@dev/zooBaojiexiaoxiaole.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=宝洁消消乐
 cron "0 1,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_star_shop.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=明星小店
 cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=5G超级盲盒
 cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qmxx.js, img-url=https://i0.hdslb.com/bfs/album/5d117c3f2a1a15fe692e50282b3e7beeebf96422.png, enabled=true, tag=全免小说
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jay_member_olb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东欧乐b
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=与“粽”不同
 cron "30 9,10 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_mcxhd_brandcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_dphby.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=大牌闪购红包雨
@@ -132,7 +138,6 @@ cron "15 08 5-30 4 *" script-path=https://share.r2ray.com/dust/member/monk_vinda
 cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jin_tie.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领金贴
 cron "0 9 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://qxzy.top/rules/QuantumultX/img/tls.png, enabled=true, tag=特仑苏小程序
 cron "10 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
-cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=猜歌王者改进度
 cron "25 8 * 4-5 *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/z_tcl_lining.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东TCL电视自营
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_market_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=幸运大转盘
 cron "5-45/20 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_health_collect.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=东东健康社区收集能量
@@ -154,13 +159,12 @@ cron "0 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ehy
 cron "0 0 0/2 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/jfz.js, img-url=https://qxzy.top/rules/QuantumultX/img/jfz.png, enabled=true, tag=积分赚挖矿
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/nmm.js, img-url=https://qxzy.top/rules/QuantumultX/img/nmm.png, enabled=true, tag=牛蒙蒙
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pahcz.js, img-url=https://qxzy.top/rules/QuantumultX/img/pahcz.png, enabled=true, tag=平安好车主
-cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/car/monk_skyworth_car.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东创维全勤奖(加购)
 cron "0 0/10 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/qkyl.js, img-url=https://qxzy.top/rules/QuantumultX/img/qkyl.png, enabled=true, tag=⚠️趣客有礼
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/pxx.js, img-url=https://qxzy.top/rules/QuantumultX/img/pdd.png, enabled=true, tag=⚠️拼夕夕
 cron "0-59 9,12,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/shq.js, img-url=https://ftp.bmp.ovh/imgs/2021/04/e2b32e2eb2ad0cd3.png, enabled=true, tag=生活圈
 cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, img-url=https://ae01.alicdn.com/kf/U7f67ec3bd2d848a59d72a1807dc9e324r.jpg, enabled=true, tag=落花无生
 cron "15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/vsh.js, img-url=https://ae01.alicdn.com/kf/Uf0da879c7acd4c7bad91f0e5a97667e1O.jpg, enabled=true, tag=V生活
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/Task/zyb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/zuoyebang.png, enabled=true, tag=作业帮签到
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/Task/zyb.js, img-url=https://qxzy.top/rules/QuantumultX/img/zyb.png, enabled=true, tag=作业帮签到
 cron "0-59 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcyd.js, img-url=https://ae01.alicdn.com/kf/Ua6bd9417d492473f8ca0c3110b2176307.jpg, enabled=true, tag=文创阅读
 cron "20 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ximei.js, img-url=https://ae01.alicdn.com/kf/Ucd02ea79ef22473daf3576486d134509Q.jpg, enabled=true, tag=西梅
 cron "10-15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lgyy.js, img-url=https://ae01.alicdn.com/kf/Uc3c35e1796624a7ca6a23c89c7f0dff2H.jpg, enabled=true, tag=朗果英语
@@ -254,7 +258,7 @@ cron "30 7-23 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/
 cron "35 5 0 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/kuaishou.js, img-url=https://qxzy.top/rules/QuantumultX/img/kuaishou.png, enabled=true, tag=快手极速版
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/script/master/kkd.js, img-url=https://qxzy.top/rules/QuantumultX/img/kkd.png, enabled=true, tag=快看点
 cron "5,35 8-23 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jrtt.js, img-url=https://qxzy.top/rules/QuantumultX/img/jrtt.png, enabled=true, tag=今日头条极速版
-cron "1 * * * *" script-path=https://raw.githubusercontent.com/age174/-/main/baosxq.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=宝石星球
+cron "1 * * * *" script-path=https://raw.githubusercontent.com/age174/-/main/baosxq.js, img-url=https://qxzy.top/rules/QuantumultX/img/baosxq.png, enabled=true, tag=宝石星球
 cron "2 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_bean_change.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=京豆变动通知 
 cron "5 1 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bigfun.js, img-url=https://raw.githubusercontent.com/shoujiqiyuan/PokemonGOforQuanX/master/IconSet/Z003.png, enabled=true, tag=bigfun签到
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东多合一
