--- a/rule/task.conf
+++ b/rule/task.conf
@@ -16,8 +16,9 @@ cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/pxylen
 cron "1 6,22 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/zZPiglet/DiDi_sleep.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, tag=滴滴睡觉
 cron "6 0 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/ttwk/ttwk.js, img-url=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/ttwk.png, tag=支付宝天天挖矿
 cron "7 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/iQIYI.png, tag=爱奇艺
-cron "8 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/sunert/Task/weibo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/weibo.png, enable=true,  tag=微博&钱包
-cron "9 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasenews/neteasenews.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/neteasenews.png, enabled=true, tag=网易新闻
+cron "8 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/sunert/Task/weibo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/weibo.png, tag=微博&钱包
+cron "9 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasenews/neteasenews.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/neteasenews.png, tag=网易新闻
+cron "11 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/feng/feng.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/feng.png, tag=威锋网 (APP)
 
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js,  img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/anbo.png, enable=false,tag=58同城
 
